# hed-specification

./: .codespellrc  .gitignore  .lycheeignore  CHANGELOG.md  CHANGELOGSPEC.md  CHANGELOG_HED2HISTORY.md  CHANGELOG_SPEC.md  CHANGES_ACCEPTED.md  HED-generation2-schema-7.3.0.mediawiki  HED-generation2-schema-V2.0.0.mediawiki  HED-generation2-schema-V7.2.0.mediawiki  HED-generation3-schema-8.0.0-alpha.1.mediawiki  HED-generation3-schema-8.0.0-alpha.2.mediawiki  HED-generation3-schema-8.0.0-alpha.3.1.mediawiki  HED-generation3-schema-8.0.0-alpha.3.mediawiki  HED-generation3-schema-8.0.0-beta-1.mediawiki  HED-generation3-schema-8.0.0-beta.1.mediawiki  HED-generation3-schema-8.0.0-beta.2.mediawiki  HED-generation3-schema-V2.0.0.mediawiki  HED-generation3-schema-V8.0.0-alpha.1.mediawiki  HED-generation3-schema-V8.0.0-alpha.2.mediawiki  HED-generation3-schema-V8.0.0-alpha.3.mediawiki  HED-generation3-schema.mediawiki  HED-schema-reduced.mediawiki  HED-schema-revision  HED-schema.mediawiki  HEDSchemaRevisions.md  HEDremap.tsv  LICENSE  NOTES.md  PROPOSED.md  README.md  build-docs.bat  build-sphinx.bat  check-links.bat  check_links.py  lychee.toml  mkdocs.yml  pyproject.toml  readthedocs.yml  (+2 more)
deprecated/: HED-generation3-schema-8.0.0-alpha.3.mediawiki  HED-generation3-schema-oldformat.mediawiki
docs/: 01_Introduction.md  02_Terminology.md  03_Schema.md  04_Basic_annotation.md  05_Advanced_annotation.md  06_Infrastructure.md  06_Library_schema.md  07_HED_in_BIDS.md  07_HED_with_BIDS.md  07_Library_schema.md  07_Tools.md  08_Resources.md  A_Appendix_A.md  Appendix_A.md  Appendix_B.md  Documentation.md  Resources.md  Tools.md  conf.py  index.rst  requirements.txt  scratch.md  temp.json  temp2.md
hed-xsd-test/: HED8.0.0-beta.1.xml  HED8.0.0-beta.1a.xml  HED8.0.0-beta.1a.xsd  beta 1.xsd
hedspec/: HEDspecification.md
hedwiki/: HED-generation2-schema-7.3.0.mediawiki  HED-generation3-schema-8.0.0-beta.1.mediawiki  HED-generation3-schema-8.0.0-beta.2.mediawiki  HED-generation3-schema-8.0.0.mediawiki  HED7.2.0.mediawiki  HED7.3.0.mediawiki  HED8.0.0.mediawiki  HED8.1.0.mediawiki  HED8.2.0.mediawiki  HED8.3.0.mediawiki
hedxml/: HED7.1.0.xml  HED7.1.1.xml  HED7.2.0.xml  HED8.0.0-alpha.1.xml  HED8.0.0-alpha.2.xml  HED8.0.0-alpha.3.xml  HED8.0.0-beta.1.xsd  HED8.0.0.xml  HEDLatest.xml
hedxml-devunit/: HEDv1.0.0-devunit.xml  HEDv1.0.0-unitdev.xml  HEDv1.1.1-devunit.xml
hedxml-reduced/: HED-schema-reduced.xml  HEDLatest-reduced.xml  HEDLatest-reducedA.xml  HEDReduced.091920.xml  HEDReduced080420.xml  HEDReduced080620.xml  HEDReduced080820.xml  HEDReduced080920.xml  HEDv1.6.1-reduced.xml  HEDv1.6.10-reduced.xml  HEDv1.6.11-reduced.xml  HEDv1.6.12-reduced.xml  HEDv1.6.13-reduced.xml  HEDv1.6.16-reduced.xml  HEDv1.6.17-reduced.xml  HEDv1.6.18-reduced.xml  HEDv1.6.3-reduced.xml  HEDv1.6.4-reduced.xml  HEDv1.6.5-reduced.xml  HEDv1.6.6-reduced.xml  HEDv1.6.7-reduced.xml  HEDv1.6.8-reduced.xml  HEDv1.6.9-reduced.xml  tempi.xml
hedxml-restruct/: HEDV1.0.0-restruct.xml  HEDv1.2.0-restruct.xml  HEDv1.6.0-restruct.xml  HEDv1.6.1-restruct.xml  HEDv1.6.2-restruct.xml
hedxml-test/: HED-generation2-schema-7.2.0.xml  HED-generation2-schema-7.3.0.xml  HED-generation2-schema-V2.0.0.xml  HED-generation3-schema-8.0.0-alpha.1.xml  HED-generation3-schema-8.0.0-alpha.2.xml  HED-generation3-schema-8.0.0-alpha.3.xml  HED-generation3-schema-8.0.0-beta.2.mediawiki  HED-generation3-schema-8.0.0-beta.3.mediawiki  HED-generation3-schema-8.0.0-beta.3a.mediawiki  HED-generation3-schema-8.0.0-beta.4.mediawiki  HED-generation3-schema-8.0.0-beta.5.mediawiki  HED7.2.0.xml  HED7.3.0.xml  HED8.0.0-alpha.1.xml  HED8.0.0-alpha.2.xml  HED8.0.0-alpha.3.1.xml  HED8.0.0-alpha.3.xml  HED8.0.0-alpha.3a.xml  HED8.0.0-beta-1.xml  HED8.0.0-beta-1a.xml  HED8.0.0-beta-1b.xml  HED8.0.0-beta.1.xml  HED8.0.0-beta.2.xml  HED8.0.0-beta.2.xsd  HED8.0.0-beta.2a.xml  HED8.0.0-beta.3.xml  HED8.0.0-beta.4.xml  HED8.0.0-beta.5.xml  README.md  Unconfirmed 135222.crdownload  Unconfirmed 697858.crdownload
hedxsd-test/: HED-generation3-schema-8.0.0-beta.1a.mediawiki  HED8.0.0-beta.1.xml  HED8.0.0-beta.1a.xml  HED8.0.0-beta.2.xml  Unconfirmed 802342.crdownload
prelease/: CHANGES.md  (+4 more)
(+143 files in other folders)
